tests/errors/syn_cases9.java
public class syn_cases9 {
public static void main(String[] args){
switch(args.length){
case break;
}
}
}